--- a/Games.html
+++ b/Games.html
@@ -153,7 +153,47 @@ for (i = 0; i < acc.length; i++) {
     <h1 class="w3-margin w3-xlarge">By Schmextensions</h1>
 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'U7U474RHW');kofiwidget2.draw();</script> 
 </div>
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
 
+    <div class="w3-twothird">
+      <h1>Other Extensions</h1>
+<ul>
+  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://microsoftedge.microsoft.com/addons/detail/ondeebmeeimeohmahjggochihalbehcb' target="_blank">Messenger popup</a></li>
+  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://microsoftedge.microsoft.com/addons/detail/mnkpjkmnmnmicfaohkcmhkegfppjdmfc' target="_blank">Simple draw</a></li>
+  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='#'>Whatsapp popup - Coming soon</a></li>
+  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='#'>Nope button</a></li>
+</ul>  
+
+
+      <p class="w3-text-grey">Remember to stay updated!.</p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge">Schmextensions</h1>
+    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Us on Ko-fi', '#29abe0', 'U7U474RHW');kofiwidget2.draw();</script> 
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+  <div class="w3-xlarge w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+ </div>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
   <div class="w3-xlarge w3-padding-32">
