--- a/Games.html
+++ b/Games.html
@@ -163,11 +163,7 @@ for (i = 0; i < acc.length; i++) {
     <div class="w3-twothird">
       <h1>Other Extensions</h1>
 <ul>
-  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://microsoftedge.microsoft.com/addons/detail/ondeebmeeimeohmahjggochihalbehcb' target="_blank">Messenger popup</a></li>
-  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://microsoftedge.microsoft.com/addons/detail/mnkpjkmnmnmicfaohkcmhkegfppjdmfc' target="_blank">Simple draw</a></li>
-  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='#'>Whatsapp popup - Coming soon</a></li>
-  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='#'>Nope button</a></li>
-</ul>  
+  <li><a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" target="_blank">Frogger - coming soon</a></li>
 
 
       <p class="w3-text-grey">Remember to stay updated!.</p>
