--- a/index.html
+++ b/index.html
@@ -208,4 +208,14 @@ function myFunction() {
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/21080036.js"></script>
 <!-- End of HubSpot Embed Code -->
 </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-214852910-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-214852910-1');
+</script>
 </html>
