--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
+  <meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
 <body>
 
 <!-- Navbar -->
