--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </style>
 <meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
   <body>
-
+<meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
@@ -41,6 +41,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </header>
 
 <!-- First Grid -->
+<meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
@@ -58,6 +59,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .accordion {
@@ -86,7 +88,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </style>
 </head>
 <body>
-
+<meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
 <h2>Notepad+ FAQs</h2>
 
 <button class="accordion">How do I install Notepad+ on my browser?</button>
