--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   overflow: hidden;
 }
 </style>
+<!-- MailerLite Universal -->
+<script>
+(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+
+var ml_account = ml('accounts', '3644396', 'i3o4u4n9a1', 'load');
+</script>
+<!-- End MailerLite Universal -->
 </head>
 <body>
 <meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
