--- a/index.html
+++ b/index.html
@@ -88,15 +88,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </style>
 <!-- MailerLite Universal -->
 <script>
-(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
-var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
-f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
-var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
-_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
-
-var ml_account = ml('accounts', '3644396', 'i3o4u4n9a1', 'load');
+    var ml_webform_5146739 = ml_account('webforms', '5146739', 'l3e1n6', 'load');
+    ml_webform_5146739('animation', 'fadeIn');
 </script>
-<!-- End MailerLite Universal -->
 </head>
 <body>
 <meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
@@ -130,23 +124,17 @@ var ml_account = ml('accounts', '3644396', 'i3o4u4n9a1', 'load');
   <p>If the link have expired, feel free to report to <strong>michaelangelovicera22@zohomail.com</strong>.</p>
 </div>
 
+<!-- MailerLite Universal -->
 <script>
-var acc = document.getElementsByClassName("accordion");
-var i;
+(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
 
-for (i = 0; i < acc.length; i++) {
-  acc[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var panel = this.nextElementSibling;
-    if (panel.style.display === "block") {
-      panel.style.display = "none";
-    } else {
-      panel.style.display = "block";
-    }
-  });
-}
+var ml_account = ml('accounts', '3644396', 'i3o4u4n9a1', 'load');
 </script>
-
+<!-- End MailerLite Universal -->
 </body>
 </html>
 
@@ -198,17 +186,18 @@ for (i = 0; i < acc.length; i++) {
  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
+<!-- MailerLite Universal -->
 <script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else { 
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
+(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+
+var ml_account = ml('accounts', '3644396', 'i3o4u4n9a1', 'load');
 </script>
+<!-- End MailerLite Universal -->
+
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script>
   kofiWidgetOverlay.draw('schmextensions', {
@@ -225,13 +214,6 @@ function myFunction() {
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-214852910-1">
 </script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-214852910-1');
-</script>
 <!-- MailerLite Universal -->
 <script>
 (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -243,4 +225,5 @@ _.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.ma
 var ml_account = ml('accounts', '3644396', 'i3o4u4n9a1', 'load');
 </script>
 <!-- End MailerLite Universal -->
+
 </html>
