--- a/index.html
+++ b/index.html
@@ -15,6 +15,37 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </style>
 <meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
   <body>
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "105879988628700");
+      chatbox.setAttribute("attribution", "install_email");
+      chatbox.setAttribute("attribution_version", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v12.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
 <meta name="google-site-verification" content="_zAQHlTuEfUpOa_PjEmn0TQOr_dhcJs9SA4xL46l0G4" />
 <!-- Navbar -->
 <div class="w3-top">
@@ -119,7 +150,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <button class="accordion">Can I manually install Notepad+ on my browser?</button>
 <div class="panel">
-  <p>Yes, Notepad+ can be manually be installed on your browser, Such as Chrome, Opera and Firefox) <br> (instructions are included).</p>
+  <p>Yas, Notepad+ can be manually be installed on your browser, Such as Chrome, Opera and Firefox) <br> (instructions are included).</p>
   <a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://www.dropbox.com/sh/m4hy83s2n765ruq/AACvp74HnBfQwbktYffoKHCUa?dl=0' target="_blank">Download</a>
   <p>If the link have expired, feel free to report to <strong>michaelangelovicera22@zohomail.com</strong>.</p>
 </div>
