--- a/Games.html
+++ b/Games.html
@@ -49,6 +49,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
       <p class="w3-text-grey">Play pacman with the classic 8-bit style</p>
     <a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://ko-fi.com/s/3f6e33573b' target="_blank">Get it now</a>
+    <a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='manual_downlaod.html' target="_blank">Download it manually</a>
     <a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://addons.mozilla.org/en-US/firefox/addon/pacman-popup/' target="_blank">Free on Firefox</a>
     <a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href='https://nicerwritter27.github.io/web-pacman/' target="_blank">Web version</a>
 <head>
